// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`headless stream-json snapshots > admits output after a non-reducing checkpoint only when the request fits: fits 1`] = `
[
  {
    "contextWindow": 32768,
    "effective": 8192,
    "requested": 8192,
    "step": 1,
    "type": "output/budget",
  },
  {
    "error": "summary is not smaller than the shadowed content (1415 estimated framed tokens >= 208)",
    "type": "compaction/end",
  },
  {
    "contextWindow": 32768,
    "effective": 2495,
    "requested": 8192,
    "step": 2,
    "type": "output/budget",
  },
  {
    "reason": {
      "kind": "completed",
    },
    "type": "turn/end",
  },
]
`;

exports[`headless stream-json snapshots > admits output after a non-reducing checkpoint only when the request fits: full 1`] = `
[
  {
    "contextWindow": 32768,
    "effective": 8192,
    "requested": 8192,
    "step": 1,
    "type": "output/budget",
  },
  {
    "error": "summary is not smaller than the shadowed content (1415 estimated framed tokens >= 208)",
    "type": "compaction/end",
  },
  {
    "reason": {
      "error": {
        "code": "OUTPUT_BUDGET_EXCEEDED",
        "message": "no output space remains after context budgeting",
      },
      "kind": "error",
    },
    "type": "turn/end",
  },
]
`;

exports[`headless stream-json snapshots > bounds unusable summary recovery in the real headless composition: empty-fail 1`] = `
{
  "budgets": [
    {
      "contextWindow": 32768,
      "effective": 8192,
      "requested": 8192,
    },
  ],
  "completed": false,
  "summaries": 0,
}
`;

exports[`headless stream-json snapshots > bounds unusable summary recovery in the real headless composition: empty-recover 1`] = `
{
  "budgets": [
    {
      "contextWindow": 32768,
      "effective": 8192,
      "requested": 8192,
    },
    {
      "contextWindow": 32768,
      "effective": 2593,
      "requested": 8192,
    },
  ],
  "completed": true,
  "summaries": 1,
}
`;

exports[`headless stream-json snapshots > replays a tool result after a large input with the automatic output default 1`] = `
[
  {
    "contextWindow": 32768,
    "effective": 4096,
    "requested": 4096,
    "step": 1,
    "type": "output/budget",
  },
  {
    "content": [
      {
        "arguments": "{"command":"printf CLI_TOOL_ROUND_TRIP","description":"Prove the CLI tool round trip."}",
        "id": "cli-smoke-call",
        "name": "bash",
        "type": "tool-call",
      },
    ],
    "type": "assistant/message",
  },
  {
    "content": [
      {
        "content": [
          {
            "text": "CLI_TOOL_ROUND_TRIP",
            "type": "text",
          },
        ],
        "isError": false,
        "toolCallId": "cli-smoke-call",
        "type": "tool-result",
      },
    ],
    "type": "tool/result",
  },
  {
    "contextWindow": 32768,
    "effective": 4096,
    "requested": 4096,
    "step": 2,
    "type": "output/budget",
  },
  {
    "content": [
      {
        "text": "CLI tool round trip complete: CLI_TOOL_ROUND_TRIP",
        "type": "text",
      },
    ],
    "type": "assistant/message",
  },
  {
    "reason": {
      "kind": "completed",
    },
    "type": "turn/end",
  },
]
`;
